<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorBlack">

        <Button
            android:layout_width="62dp"
            android:layout_height="match_parent"
            android:background="@drawable/imageview_selector"
            android:text="@string/send_back"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:id="@+id/imageView"/>

        <TextView
            android:id="@+id/textView"
            android:text="@string/new_mail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBlack"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:layout_weight="6.48"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/imageview_selector"
            android:text="@string/send_email"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:id="@+id/btn_send"/>

    </LinearLayout>
    <LinearLayout  android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:text="收件人"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/t_sender"
            android:layout_weight="3"
            android:textSize="18sp"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/e_sender"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout  android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:text="主题"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/t_subject"
            android:layout_weight="3"
            android:textSize="18sp"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/e_subject"
            android:layout_weight="1"/>

    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/e_content"
        android:textSize="18sp"
        android:textColor="@color/colorGrayDark"
        android:hint="@string/put_content"
        android:inputType="textMultiLine"
        android:gravity="left|top"
        android:minLines="6" />

</LinearLayout>